[project]
name = "langchain-mcp-adapters-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
]
